--- a/_data/funfacts.yml
+++ b/_data/funfacts.yml
@@ -1,12 +1,12 @@
 - counter: 20000
   icon: ion-ios-chatboxes-outline
-  text: Cups of Coffee
+  text: Students Helped or Data Analysis
 - counter: 1500
   icon: ion-ios-glasses-outline
-  text: Gallons of Soft Drink
+  text: Questions Solved
 - counter: 1200
   icon: ion-ios-compose-outline
-  text: Whiteboard Markers
+  text: Learning Models
 - counter: 300
   icon: ion-ios-timer-outline
-  text: Websites built
+  text: Partners
